frontend/zicdding-class.com/k8s/manifests/front-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: front-app
  namespace: zicdding
spec:
  selector:
    app: front-app
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
      nodePort: 31000
  type: LoadBalancer
